Version 2.2.11 -
-------------------------------
Core - General
  - Fix minor bug in copying content objects
  - Minor fix to array indexes when filling params in ContentBase

CMSContentManager --
  - Fix an issue with copying non-core content objects

ModuleManager v2.1.7
  - Minor exception handling improvements.
  - Minor improvement to dependency detection with modules that do not exist in ModuleRepository

Version 2.2.10 - Spuzzum
-------------------------------
Core - General
  - Fix minor potential authenticated object insertion vulnerability in changegroupperm
  - Fix minor potential uncleaned input vulnerability in siteprefs
  - Minor improvement to get_real_ip()
  - Fix to clearing cache in cms_filecache_driver

News v2.51.5
  - Fix unauthenticated SQL injection vulnerability with the default action

ModuleManager v2.1.6
  - Fix authenticated object insertion vulnerability in the installmodule action
  - Improve ordering of the dependencies before installing or upgrading modules.
  - Adds more auditing, particularly in the cached request stuff.

FilePicker v1.0.4
  - Fix authenticated object insertion vulnerability

Version 2.2.9.1
-------------------------------
Core - General
  - fix to the CmsLayoutStylesheetQuery class
  - fix an edge case in the Database\Connection::DbTimeStamp() method

MicroTiny v2.2.4
  - Minor fix in error displays.

Phar Installer v1.3.7
  - Fix to edge case in step 3 where memory_limit is set to -1

Version 2.2.9 - Blow Me Down
-------------------------------
Core - General
  - PHP 7.2+ fixes.
  - Now do not call Module::InitializeAdmin() or Module::InitializeFrontend() if the module loading is being forced
    (as is the case sometimes within ModuleManager);
  - Minor changes and fixes to prevent warnings/notices in CLI based scripts
  - Improvements to the {browser_lang} plugin.
  - Fixes a bug in the CmsLayoutTemplateQuery class.
  - Fixes a bug with the name= parameter in the {cms_stylesheet} plugin.